Grace/tests/gibbs/errors/t169.grace
// ERROR = P1018
print(1 + .23)
